# go-sequoia-plugin

./: .gitignore  GNUmakefile  README.md  sequoia.go
capi/: Cargo.toml  build.rs
capi/include/: sequoia.h
capi/src/: error.rs  lib.rs  signature.rs
cmd/: go.mod  go.sum
cmd/sign/: sign.go
cmd/verify/: verify.go
examples/: go.mod  go.sum  verify.go
examples/sign/: mechanism.go  sign.go
signature/: go.mod  go.sum  mechanism_sequoia.go
