[package]
name = "sequoia"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "sequoia"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0"
dirs = "5"
libc = "0.2"
sequoia-keystore = "0.3"
sequoia-openpgp = { version = "1.18", default-features = false, features = ["crypto-openssl"] }

[build-dependencies]
cbindgen = "0.24.0"
